--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ But in 2015, she was drawn back to the Law School, convinced that a J.D. was cri
 <br> <br>--By Kathy Graves, a Twin Cities-based freelance writer
     
     <section id="contact" style="text-align:center;">
-      <br><h2>Contact:</h2>
+      <h2>Contact:
       <a href="https://www.linkedin.com/in/bernadette-kafoe-nee-foh-293297245/" class="fa fa-linkedin" target="blank"></a>
       <a href="https://ne-np.facebook.com/bernadette.foh/" class="fa fa-facebook"></a>
-       <a href="https://twitter.com/fohbernadette?lang=en" class="fa fa-twitter" target="blank"></a>
+       <a href="https://twitter.com/fohbernadette?lang=en" class="fa fa-twitter" target="blank"></a></h2>
     </section>
     
     </div>
